<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AssuranceDialog</class>
 <widget class="QDialog" name="AssuranceDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>420</width>
    <height>350</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Insurance</string>
  </property>

  <widget class="QSpinBox" name="accountIdSpinBox">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>20</y>
     <width>120</width>
     <height>30</height>
    </rect>
   </property>
  </widget>

  <widget class="QComboBox" name="insuranceComboBox">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>70</y>
     <width>200</width>
     <height>30</height>
    </rect>
   </property>
  </widget>

  <widget class="QLabel" name="priceLabel">
   <property name="geometry">
    <rect>
     <x>240</x>
     <y>70</y>
     <width>150</width>
     <height>30</height>
    </rect>
   </property>
   <property name="text">
    <string>0.00</string>
   </property>
  </widget>

  <widget class="QPushButton" name="buyButton">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>120</y>
     <width>150</width>
     <height>40</height>
    </rect>
   </property>
   <property name="text">
    <string>Buy Insurance</string>
   </property>
  </widget>

  <widget class="QListWidget" name="ownedListWidget">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>180</y>
     <width>370</width>
     <height>100</height>
    </rect>
   </property>
  </widget>

  <widget class="QPushButton" name="backButton">
   <property name="geometry">
    <rect>
     <x>160</x>
     <y>300</y>
     <width>100</width>
     <height>30</height>
    </rect>
   </property>
   <property name="text">
    <string>Back</string>
   </property>
  </widget>
 </widget>
</ui>
